# pycoda

./: .flake8  .gitignore  .travis.yml  LICENSE.txt  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: main.yaml
pycoda/: __init__.py  codafile.py  factories.py  fields.py  records.py
pycoda/tests/: test_codafile.py  test_factories.py  test_fields.py  test_records.py
